
Changelog
=========

0.7.1
-----

This is a bugfix release.

* PEP8 cleanups

0.7.0
-----

This is a feature release. Custom user classes are now supported via the
``LAZYSIGNUP_USER_MODEL`` setting. This is a backwards-compatible change.

Thanks to Luke Zapart for the idea and initial implementation.

0.6.2
-----

This is a bugfix release. Issues fixed:

* The LazySignupBackend no longer relies on a specific User class to
  authenticate a user. It now uses the fact that there is a relationship
  between the LazyUser and the main site User class. This fixes the bug
  where authenticate() was looking directly for UNUSABLE_PASSWORD, and also
  paves the way for custom user classes.

0.6.1
-----

This is a bugfix release. Issues fixed:

* https://github.com/danfairs/django-lazysignup/issues#issue/2 - Invalid user
  IDs in the session could cause an AttributeError from the auth backend.

Thanks to Alex Ehlke for the report and patch.

0.6.0
-----

This is a feature release:

* Users created lazily but not currently logged-in are now correctly detected
  as lazy users. To facilitate this, a ``LazyUser`` model is included. Note
  that existing code using ``is_lazy_user`` only on authenticated users will
  continue to work, as the old method of checking the ``backend`` attribute
  of the ``User`` object has been retained - it's faster to do that than a
  potentially unnecessary database query.

  For those who use it, a South migration is provided to create the initial
  table. Data migration will be handled by South migrations from now on.

* The canonical import location of ``is_lazy_user`` has changed from within
  ``lazysignup.templatetags.lazysignup_tags`` to ``lazysignup.utils``.
  Existing code that imports from the old location will continue to work.

0.5.1
-----

Bugfix release:

- Fix an issue where a lazy user would be misidentified as a non-lazy user

0.5.0
-----

This version simplifies the implementation significantly by removing the requirement for